feat: gateway config
